Bug 91057 - REGRESSION(r122184): LocaleMac::currentLocale should use current locale rather than newly create locale object.
Summary: REGRESSION(r122184): LocaleMac::currentLocale should use current locale rathe...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Platform (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: yosin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-12 01:17 PDT by yosin
Modified: 2012-07-12 02:00 PDT (History)
1 user (show)

See Also:


Attachments
Patch 1 (2.82 KB, patch)
2012-07-12 01:55 PDT, yosin
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description yosin 2012-07-12 01:17:40 PDT
When using newly create NSLocale object with locale identifier of current local object, we can't get user customized date format.
Comment 1 yosin 2012-07-12 01:55:07 PDT
Created attachment 151887 [details]
Patch 1
Comment 2 yosin 2012-07-12 01:56:05 PDT
Comment on attachment 151887 [details]
Patch 1

Could you review this patch?
Thanks in advance.

I verified locally build Chromium with four digits year.
Comment 3 Kent Tamura 2012-07-12 01:58:10 PDT
Comment on attachment 151887 [details]
Patch 1

ok.  Thanks!
Comment 4 yosin 2012-07-12 02:00:26 PDT
Comment on attachment 151887 [details]
Patch 1

Clearing flags on attachment: 151887

Committed r122430: <http://trac.webkit.org/changeset/122430>
Comment 5 yosin 2012-07-12 02:00:31 PDT
All reviewed patches have been landed.  Closing bug.